Add rest of related work and citations

--- a/KalmanFilter.bib
+++ b/KalmanFilter.bib
@@ -1,5 +1,20 @@
 % Encoding: UTF-8
 
+@Article{Davies2012,
+  author   = {Davies, Richard and Kasper, Markus},
+  journal  = {Annual Review of Astronomy and Astrophysics},
+  title    = {Adaptive {Optics} for {Astronomy}},
+  year     = {2012},
+  number   = {1},
+  pages    = {305--351},
+  volume   = {50},
+  abstract = {Adaptive optics is a prime example of how progress in observational astronomy can be driven by technological developments. At many observatories it is now considered to be part of a standard instrumentation suite, enabling ground-based telescopes to reach the diffraction limit and, thus, providing spatial resolution superior to that achievable from space with current or planned satellites. In this review, we consider adaptive optics from the astrophysical perspective. We show that adaptive optics has led to important advances in our understanding of a multitude of astrophysical processes and describe how the requirements from science applications are now driving the development of the next generation of novel adaptive optics techniques.},
+  doi      = {10.1146/annurev-astro-081811-125447},
+  file     = {Full Text PDF:http\://www.annualreviews.org/doi/pdf/10.1146/annurev-astro-081811-125447:application/pdf},
+  url      = {https://doi.org/10.1146/annurev-astro-081811-125447},
+  urldate  = {2020-06-05TZ},
+}
+
 @Article{Gilles2013,
   author    = {Gilles, Luc and Massioni, Paolo and Kulcs{\'a}r, Caroline and Raynaud, Henri-Fran{\c{c}}ois and Ellerbroek, Brent},
   journal   = {JOSA A},
@@ -175,6 +190,145 @@
   language = {en},
   url      = {http://www.sciencedirect.com/science/article/pii/S0005109812002750},
   urldate  = {2020-05-24TZ},
+}
+
+@InProceedings{Shatokhina2014,
+  author    = {Shatokhina, Iuliia and Obereder, Andreas and Ramlau, Ronny},
+  booktitle = {Adaptive {Optics} {Systems} {IV}},
+  title     = {Fast algorithm for wavefront reconstruction in {XAO}/{SCAO} with pyramid wavefront sensor},
+  year      = {2014},
+  month     = aug,
+  pages     = {91480P},
+  publisher = {International Society for Optics and Photonics},
+  volume    = {9148},
+  abstract  = {We present a fast wavefront reconstruction algorithm developed for an extreme adaptive optics system equipped with a pyramid wavefront sensor on a 42m telescope. The method is called the Preprocessed Cumulative Reconstructor with domain decomposition (P-CuReD). The algorithm is based on the theoretical relationship between pyramid and Shack-Hartmann wavefront sensor data. The algorithm consists of two consecutive steps - a data preprocessing, and an application of the CuReD algorithm, which is a fast method for wavefront reconstruction from Shack-Hartmann sensor data. The closed loop simulation results show that the P-CuReD method provides the same reconstruction quality and is significantly faster than an MVM.},
+  doi       = {10.1117/12.2057375},
+  file      = {Full Text PDF:https\://www.spiedigitallibrary.org/conference-proceedings-of-spie/9148/91480P/Fast-algorithm-for-wavefront-reconstruction-in-XAO-SCAO-with-pyramid/10.1117/12.2057375.pdf:application/pdf;Snapshot:https\://www.spiedigitallibrary.org/conference-proceedings-of-spie/9148/91480P/Fast-algorithm-for-wavefront-reconstruction-in-XAO-SCAO-with-pyramid/10.1117/12.2057375.full?SSO=1:text/html},
+  url       = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9148/91480P/Fast-algorithm-for-wavefront-reconstruction-in-XAO-SCAO-with-pyramid/10.1117/12.2057375.short},
+  urldate   = {CURRENT\_TIMESTAMP},
+}
+
+@InProceedings{Berkefeld2010,
+  author    = {Berkefeld, Thomas and Soltau, Dirk and Czichy, Reinhard and Fischer, Edgar and Wandernoth, Bernhard and Sodnik, Zoran},
+  booktitle = {Adaptive {Optics} {Systems} {II}},
+  title     = {Adaptive optics for satellite-to-ground laser communication at the 1m {Telescope} of the {ESA} {Optical} {Ground} {Station}, {Tenerife}, {Spain}},
+  year      = {2010},
+  month     = jul,
+  pages     = {77364C},
+  publisher = {International Society for Optics and Photonics},
+  volume    = {7736},
+  abstract  = {We present the setup including optics and components, the reconstruction scheme and performance estimations of an Adaptive Optics (AO) system implemented at the 1m telescope of the ESA Optical Ground Station (OGS), Observatorio del Teide, Tenerife. The system will be used to improve the signal-to-noise ratio of satellite to ground laser communications. It operates with coherent laser communication systems at 1064nm. The wavefront sensor is an 88-element Shack-Hartmann-sensor (11 subapertures across the pupil), matched to a 12\&times;12 actuator Multi-DM membrane deformable mirror (DM). The system is able to remove a large part of the turbulence-induced and static wavefront errors by using more than 90 degrees of freedom (modes). Due to a special high speed infrared camera, the control loop can run at speeds up to 20 kHz, achieving a 0db bandwidth of about 500Hz, depending on the received laser power.},
+  doi       = {10.1117/12.857681},
+  file      = {Full Text PDF:https\://www.spiedigitallibrary.org/conference-proceedings-of-spie/7736/77364C/Adaptive-optics-for-satellite-to-ground-laser-communication-at-the/10.1117/12.857681.pdf:application/pdf;Snapshot:https\://www.spiedigitallibrary.org/conference-proceedings-of-spie/7736/77364C/Adaptive-optics-for-satellite-to-ground-laser-communication-at-the/10.1117/12.857681.full:text/html},
+  url       = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/7736/77364C/Adaptive-optics-for-satellite-to-ground-laser-communication-at-the/10.1117/12.857681.short},
+  urldate   = {CURRENT\_TIMESTAMP},
+}
+
+@Article{Burns2019,
+  author    = {Burns, Stephen A and Elsner, Ann E and Sapoznik, Kaitlyn A and Warner, Raymond L and Gast, Thomas J},
+  journal   = {Progress in retinal and eye research},
+  title     = {Adaptive optics imaging of the human retina},
+  year      = {2019},
+  pages     = {1--30},
+  volume    = {68},
+  publisher = {Elsevier},
+}
+
+@Article{Phipps2012,
+  author   = {Phipps, Claude R. and Baker, Kevin L. and Libby, Stephen B. and Liedahl, Duane A. and Olivier, Scot S. and Pleasance, Lyn D. and Rubenchik, Alexander and Trebes, James E. and Victor George, E. and Marcovici, Bogdan and Reilly, James P. and Valley, Michael T.},
+  journal  = {Advances in Space Research},
+  title    = {Removing orbital debris with lasers},
+  year     = {2012},
+  issn     = {0273-1177},
+  month    = may,
+  number   = {9},
+  pages    = {1283--1300},
+  volume   = {49},
+  abstract = {Orbital debris in low Earth orbit (LEO) are now sufficiently dense that the use of LEO space is threatened by runaway collision cascading. A problem predicted more than thirty years ago, the threat from debris larger than about 1cm demands serious attention. A promising proposed solution uses a high power pulsed laser system on the Earth to make plasma jets on the objects, slowing them slightly, and causing them to re-enter and burn up in the atmosphere. In this paper, we reassess this approach in light of recent advances in low-cost, light-weight modular design for large mirrors, calculations of laser-induced orbit changes and in design of repetitive, multi-kilojoules lasers, that build on inertial fusion research. These advances now suggest that laser orbital debris removal (LODR) is the most cost-effective way to mitigate the debris problem. No other solutions have been proposed that address the whole problem of large and small debris. A LODR system will have multiple uses beyond debris removal. International cooperation will be essential for building and operating such a system.},
+  doi      = {10.1016/j.asr.2012.02.003},
+  file     = {ScienceDirect Snapshot:https\://www.sciencedirect.com/science/article/pii/S0273117712001020:text/html;ScienceDirect Full Text PDF:https\://pdf.sciencedirectassets.com/271642/1-s2.0-S0273117712X00085/1-s2.0-S0273117712001020/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEEcaCXVzLWVhc3QtMSJHMEUCIFCreC5eTSlGPwoGQMBQ1x%2FLFdUe7t63bZOiZfA0acxnAiEAhiToSC%2BOJTob6wSTvYP6pM7enJRf3gDL3G3KViljGeEqvQMIsP%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARADGgwwNTkwMDM1NDY4NjUiDEvFgK39UPQnerh7tCqRAwl5rhNymzmc%2BQBBpEKpI4RpmeDeG6xIJMqnMnqxzuKPOx%2B8PXIfcE5t895sbapwSzgIZGdNDcaRPqzqaqIe8mOxTvACisLP9MSOLix076D%2Bi8pOP7ML2rzHIduzQ5TJ7kTqy35R5c5luhZoqXn6mF0%2B1G50RJNFUH1%2Fhr8WuQMkfbl3%2BTfeiShM4WU%2FZqa%2BIKCUW%2B8EnVCAkiySE0LTY%2FQgdd6vkHt4PRn7lXV1Mh5AVFJ0NOhZ9uCzY2INIYEiCNcWnF%2FPt8cQOws2cEseJf8dchhJP%2BPIpz0f0eVPxbj7JMWsHSCo8rk8w1RCjWW0Pr3cNf9gKLRHr8X%2F%2B48LAnmEbE5QHrDQbtkHE3GF5D3CwIIGTnfZL0DFQDD17SUQdXyNdi59Sq1dr2C1sG0PHNCe8BAz%2BfBFji8Q2dnvYHXeZm9TAvCo4Dr69%2FZH6fYdn8uEsAl1zeRuJ0TCY4vrW4%2BTuWypsEEycyfx41oD33bchlS3WkHvmdiFEZicInuIMhj%2Be6pTq8IewGfnSNSrDrxjMOqQ6%2FYFOusByIVahHl4xTa3lX98vASiQERVIDseWAPqCPitGxQyWFN4Rp66tfFldf9z7eq03LsTMUHDoOEAU8nHy0pf9S6UOLltDyXnUmXyc3xqO9uZ5BonKRh5N3RiRFWO4VCVpZaxi6LtB8s2hksWTiNrtB3ptUnL6Szv9uFKsJUDvry7qR70onXMXe23ClHXl2szTfuCy0rtSYbeNv8pZes%2F7ryQnXcnAp%2BQU8IPmOIyG0T8SA74QpzfdvS5OgVzksBIBrUnUAJBuMq2ZCKzWSXn4e4JkdliHICMY9ZkoH5%2B4Qtpte7qqjcY2RS2q6ouKQ%3D%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200605T230709Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYRI3GHUEM%2F20200605%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=c414c2ff549b1ab9872c094d15502245fd69abc773b697c3c0704d3c5ed55e58&hash=48d6e1f079e56ac67635c8e5865c99d6d78dc8bce32a166a6b83ff8d0eee06e2&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0273117712001020&tid=spdf-7c1dc61b-e59f-4f6a-b108-795722e737f1&sid=570f7bdf815fd346b27a600746c38d32cf7egxrqa&type=client:application/pdf},
+  keywords = {Space debris, Laser ablation, Orbital debris removal, Adaptive optics, Segmented mirror design, Phase conjugation},
+  language = {en},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0273117712001020},
+  urldate  = {2020-06-05TZ},
+}
+
+@Article{Yang2006,
+  author   = {Yang, Yuanxi and Gao, Weiguang},
+  journal  = {Journal of Geodesy},
+  title    = {An {Optimal} {Adaptive} {Kalman} {Filter}},
+  year     = {2006},
+  issn     = {1432-1394},
+  month    = jul,
+  number   = {4},
+  pages    = {177--183},
+  volume   = {80},
+  abstract = {In a robustly adaptive Kalman filter, the key problem is to construct an adaptive factor to balance the contributions of the kinematic model information and the measurements on the state vector estimates, and the corresponding learning statistic for identifying the kinematic model biases. What we pursue in this paper are some optimal adaptive factors under the particular conditions that the state vector can or cannot be estimated by measurements. Two optimal adaptive factors are derived, one of which is deduced by requiring that the estimated covariance matrix of the predicted residual vector equals the corresponding theoretical one. The other is obtained by requiring that the estimated covariance matrix of the predicted state vector equals its theoretical one. The two related optimal adaptive factors are given. These are analyzed and compared in theory and in an actual example. This shows, through the actual computations, that the filtering results obtained by optimal adaptive factors are superior to those obtained by adaptive factors based on experience.},
+  doi      = {10.1007/s00190-006-0041-0},
+  file     = {Springer Full Text PDF:https\://link.springer.com/content/pdf/10.1007%2Fs00190-006-0041-0.pdf:application/pdf},
+  language = {en},
+  url      = {https://doi.org/10.1007/s00190-006-0041-0},
+  urldate  = {2020-06-05TZ},
+}
+
+@Article{Kalman1960,
+  author = {R. E. Kalman},
+  title  = {A New Approach to Linear Filtering and Prediction Problems},
+  year   = {1960},
+  issn   = {0021-9223},
+  pages  = {35-45},
+  volume = {82},
+  doi    = {10.1115/1.3662552},
+}
+
+@Article{Hongwei2006,
+  author   = {Hongwei, Bian and Zhihua, Jin and Weifeng, Tian},
+  journal  = {Journal of Systems Engineering and Electronics},
+  title    = {{IAE}-adaptive {Kalman} filter for {INS}/{GPS} integrated navigation system},
+  year     = {2006},
+  issn     = {1004-4132},
+  month    = sep,
+  number   = {3},
+  pages    = {502--508},
+  volume   = {17},
+  abstract = {A marine INS/GPS adaptive navigation system is presented. GPS with two antenna providing vessel's altitude is selected as the auxiliary system fusing with INS to improve the performance of the hybrid system. The Kalman filter is the most frequently used algorithm in the integrated navigation system, which is capable of estimating INS errors online based on the measured errors between INS and GPS. The standard Kalman filter (SKF) assumes that the statistics of the noise on each sensor are given. As long as the noise distributions do not change, the Kalman filter will give the optimal estimation. However GPS receiver will be disturbed easily and thus temporally changing measurement noise will join into the outputs of GPS, which will lead to performance degradation of the Kalman filter. Many researchers introduce fuzzy logic control method into innovation-based adaptive estimation adaptive Kalman filtering (IAE-AKF) algorithm, and accordingly propose various adaptive Kalman filters. However how to design the fuzzy logic controller is a very complicated problem still without a convincing solution. A novel IAE-AKF is proposed herein, which is based on the maximum likelihood criterion for the proper computation of the filter innovation covariance and hence of the filter gain. The approach is direct and simple without having to establish fuzzy inference rules. After having deduced the proposed IAE-AKF algorithm theoretically in detail, the approach is tested by the simulation based on the system error model of the developed INS/GPS integrated marine navigation system. Simulation results show that the adaptive Kalman filter outperforms the SKF with higher accuracy, robustness and less computation. It is demonstrated that this proposed approach is a valid solution for the unknown changing measurement noise exited in the Kalman filter.},
+  doi      = {10.1016/S1004-4132(06)60086-8},
+  file     = {IEEE Xplore Full Text PDF:https\://ieeexplore.ieee.org/ielx5/5971804/6071370/06071380.pdf?tp=&arnumber=6071380&isnumber=6071370&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2RvY3VtZW50LzYwNzEzODA/YXJudW1iZXI9NjA3MTM4MCZ0YWc9MQ==:application/pdf;IEEE Xplore Abstract Record:https\://ieeexplore.ieee.org/document/6071380?arnumber=6071380&tag=1:text/html},
+  groups   = {Australi},
+  keywords = {Global Positioning System, Noise, Noise measurement, Technological innovation, Filtering algorithms, Estimation, inertial navigation system, global positioning system, integrated navigation system, adaptive Kalman filter},
+}
+
+@Article{Sarkka2009,
+  author   = {Sarkka, Simo and Nummenmaa, Aapo},
+  journal  = {IEEE Transactions on Automatic Control},
+  title    = {Recursive {Noise} {Adaptive} {Kalman} {Filtering} by {Variational} {Bayesian} {Approximations}},
+  year     = {2009},
+  issn     = {1558-2523},
+  month    = mar,
+  number   = {3},
+  pages    = {596--600},
+  volume   = {54},
+  abstract = {This article considers the application of variational Bayesian methods to joint recursive estimation of the dynamic state and the time-varying measurement noise parameters in linear state space models. The proposed adaptive Kalman filtering method is based on forming a separable variational approximation to the joint posterior distribution of states and noise parameters on each time step separately. The result is a recursive algorithm, where on each step the state is estimated with Kalman filter and the sufficient statistics of the noise variances are estimated with a fixed-point iteration. The performance of the algorithm is demonstrated with simulated data.},
+  doi      = {10.1109/TAC.2008.2008348},
+  file     = {IEEE Xplore Full Text PDF:https\://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=4796261&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50LzQ3OTYyNjE/Y2FzYV90b2tlbj1uQTNJY043QXd1UUFBQUFBOjJtM3NnTFZXRnpySWFxM1A1NU1KbzdJTDFOMTJrLXZRbFYtSktWdXVueXRya2JYTWlFQ0M1OElWbDMxekROcEUtaGE4aGJPRkc5TQ==:application/pdf;IEEE Xplore Abstract Record:https\://ieeexplore.ieee.org/abstract/document/4796261?casa_token=nA3IcN7AwuQAAAAA\:2m3sgLVWFzrIaq3P55MJo7IL1N12k-vQlV-JKVuunytrkbXMiECC58IVl31zDNpE-ha8hbOFG9M:text/html},
+  groups   = {Australi},
+  keywords = {adaptive Kalman filters, iterative methods, recursive estimation, variational techniques, recursive noise adaptive Kalman filtering, variational Bayesian approximations, recursive estimation, separable variational approximation, fixed-point iteration, Kalman filters, Adaptive filters, Filtering, Bayesian methods, State estimation, Recursive estimation, State-space methods, Statistical distributions, Noise measurement, Signal processing algorithms, Adaptive filtering, Kalman filtering, noise adaptive filtering, variational Bayesian methods},
+}
+
+@InProceedings{Kanghua2007,
+  author    = {Kang-hua, Tang and Mei-ping, Wu and Xiao-ping, Hu},
+  booktitle = {2007 2nd {IEEE} {Conference} on {Industrial} {Electronics} and {Applications}},
+  title     = {Multiple {Model} {Kalman} {Filtering} for {MEMS}-{IMU}/{GPS} {Integrated} {Navigation}},
+  year      = {2007},
+  month     = may,
+  note      = {ISSN: 2158-2297},
+  pages     = {2062--2066},
+  abstract  = {The conventional Kalman filtering algorithm requires the definition of a dynamic and stochastic model, and errors of low cost MEMS-IMU are likely to vary temporally. So the conventional Kalman filter exists limitation in MEMS-IMU/GPS integrated navigation. This paper presented the use of multiple model adaptive estimation(MMAE) where multiple Kalman filters were run in parallel using different dynamic or stochastic models in MEMS-IMU/GPS integrated navigation. And the modified multiple model Kalman filter was used in order to solve the limitation of multiple model adaptive estimation(MMAE). Using static tests, the algorithm designed was validated. The test results show that the modified multiple model Kalman filter can improve performance of MEMS-IMU/GPS integrated navigation system, compared to the conventional Kalman filtering algorithm. And using the designed algorithm, the positioning accuracy is better than 5m and velocity accuracy is better than 0.1m/ s2, and the attitude errors are less than 0.5 degrees on the static condition.},
+  doi       = {10.1109/ICIEA.2007.4318773},
+  file      = {IEEE Xplore Full Text PDF:https\://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=4318773&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50LzQzMTg3NzM/Y2FzYV90b2tlbj1oellXa01QbzJwWUFBQUFBOmJJSFhDSW8yWGRBSWxfT0ZoWk9lTG1BeDRvTnBuaFJFeHI2bm1QaUFqWDlzekVlYVFoU0xzcU9zZkdkNE5DR19ZTm1DZVF5UGdhdw==:application/pdf;IEEE Xplore Abstract Record:https\://ieeexplore.ieee.org/abstract/document/4318773?casa_token=hzYWkMPo2pYAAAAA\:bIHXCIo2XdAIl_OFhZOeLmAx4oNpnhRExr6nmPiAjX9szEeaQhSLsqOsfGd4NCG_YNmCeQyPgaw:text/html},
+  groups    = {Australi},
+  issn      = {2158-2297},
+  keywords  = {adaptive estimation, Global Positioning System, inertial navigation, Kalman filters, micromechanical devices, multiple model adaptive estimation, stochastic model, dynamic model, GPS integrated navigation, MEMS-IMU, multiple model Kalman filtering, Kalman filters, Filtering, Global Positioning System, Navigation, Industrial electronics},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
