--- a/KalmanFilter.bib
+++ b/KalmanFilter.bib
@@ -331,6 +331,16 @@
   keywords  = {adaptive estimation, Global Positioning System, inertial navigation, Kalman filters, micromechanical devices, multiple model adaptive estimation, stochastic model, dynamic model, GPS integrated navigation, MEMS-IMU, multiple model Kalman filtering, Kalman filters, Filtering, Global Positioning System, Navigation, Industrial electronics},
 }
 
+@Article{article,
+  author  = {Bøgh, Kenneth and Chester, Sean and Assent, Ira},
+  journal = {PVLDB},
+  title   = {Work-efficient parallel skyline computation for the GPU},
+  year    = {2015},
+  month   = {05},
+  volume  = {8},
+  doi     = {10.14778/2777598.2777605},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
