Final report finished

--- a/KalmanFilter.bib
+++ b/KalmanFilter.bib
@@ -341,6 +341,26 @@
   doi     = {10.14778/2777598.2777605},
 }
 
+@Article{article,
+  author  = {Almagbile, Ali and Wang, Jinling and Ding, Weidong},
+  journal = {Journal of Global Positioning Systems},
+  title   = {Evaluating the Performances of Adaptive Kalman Filter Methods in GPS/INS Integration},
+  year    = {2010},
+  month   = {06},
+  volume  = {9},
+  doi     = {10.5081/jgps.9.1.33},
+}
+
+@InProceedings{sevin2014enabling,
+  author       = {Sevin, A and Perret, D and Gratadour, D and Lain{\'e}, M and Brul{\'e}, J and Le Ruyet, B},
+  booktitle    = {Adaptive Optics Systems IV},
+  title        = {Enabling technologies for GPU driven adaptive optics real-time control},
+  year         = {2014},
+  organization = {International Society for Optics and Photonics},
+  pages        = {91482G},
+  volume       = {9148},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
